Let's try that again.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,4 @@ jobs:
         run: dotnet test
         env:
           RELEASE_VERSION: 0.0.0-test+${{ github.sha }}
+          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
