--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Push to github release
         uses: actions/upload-release-asset@v1.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./DiceLib-Proj/out/DiceLib.${{ github.event.release.tag_name }}.nupkg
@@ -44,7 +44,7 @@ jobs:
           cd DiceLib
           for f in ./out/*.nupkg
           do
-            curl -vX PUT -u "ShadowFoxNixill:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/ShadowFoxNixill
+            curl -vX PUT -u "ShadowFoxNixill:${{ secrets.NIXILL_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/ShadowFoxNixill
           done
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
