--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -24,12 +24,14 @@ jobs:
         run: dotnet test
         env:
           RELEASE_VERSION: ${{ github.event.release.tag_name }}
+          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
       - name: Pack the thing up
         run: |
           cd DiceLib/
           dotnet pack -o out
         env:
           RELEASE_VERSION: ${{ github.event.release.tag_name }}
+          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
       - name: Push to github release
         uses: actions/upload-release-asset@v1.0.1
         env:
