--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -38,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./DiceLib-Proj/out/DiceLib.${{ github.event.release.tag_name }}.nupkg
+          asset_path: ./DiceLib/out/DiceLib.${{ github.event.release.tag_name }}.nupkg
           asset_name: DiceLib.${{ github.event.release.tag_name }}.nupkg
           asset_content_type: application/zip
       - name: Push to github packages
