--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -1,6 +1,6 @@
 # thanks to https://github.com/SierraSoftworks/sierralib.api.views/blob/master/.github/workflows/package.yml for helping me figure this out
 # GitHub's own documentation was a bit lacking.
-name: Publish to GitHub Packages
+name: Publish to NuGet
 
 on:
   release:
@@ -24,29 +24,25 @@ jobs:
         run: dotnet test
         env:
           RELEASE_VERSION: ${{ github.event.release.tag_name }}
-          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
       - name: Pack the thing up
         run: |
           cd DiceLib/
           dotnet pack -o out
         env:
           RELEASE_VERSION: ${{ github.event.release.tag_name }}
-          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
       - name: Push to github release
         uses: actions/upload-release-asset@v1.0.1
         env:
-          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./DiceLib/out/DiceLib.${{ github.event.release.tag_name }}.nupkg
           asset_name: DiceLib.${{ github.event.release.tag_name }}.nupkg
           asset_content_type: application/zip
-      - name: Push to github packages
+      - name: Push to nuget.org
         run: |
           cd DiceLib
           for f in ./out/*.nupkg
           do
-            curl -vX PUT -u "ShadowFoxNixill:${{ secrets.NIXILL_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/ShadowFoxNixill
+            dotnet nuget push $f --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
           done
-        env:
-          GITHUB_TOKEN: ${{ secrets.NIXILL_TOKEN }}
