--- a/CSharp.Nixill.Calc.Dice.Test/CSharp.Nixill.Calc.Dice.Test.csproj
+++ b/CSharp.Nixill.Calc.Dice.Test/CSharp.Nixill.Calc.Dice.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DiceLib\DiceLib.csproj" />
+    <ProjectReference Include="..\CSharp.Nixill.Calc.Dice\CSharp.Nixill.Calc.Dice.csproj" />
   </ItemGroup>
 
 </Project>
