Make a test for the problems we're facing

--- a/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
+++ b/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
@@ -12,7 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nixill.Calc" Version="0.2.7" />
+    <!-- <PackageReference Include="Nixill.Calc" Version="0.2.8" /> -->
+    <ProjectReference Include="../../CSharp.Nixill.Calc/CSharp.Nixill.Calc/CSharp.Nixill.Calc.csproj" />
   </ItemGroup>
 
 </Project>
