--- a/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
+++ b/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- <PackageReference Include="Nixill.Calc" Version="0.2.9" /> -->
-    <ProjectReference Include="../../CSharp.Nixill.Calc/CSharp.Nixill.Calc/CSharp.Nixill.Calc.csproj" />
+    <PackageReference Include="Nixill.Calc" Version="0.2.9" />
+    <!-- <ProjectReference Include="../../CSharp.Nixill.Calc/CSharp.Nixill.Calc/CSharp.Nixill.Calc.csproj" /> -->
   </ItemGroup>
 
 </Project>
