--- a/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
+++ b/CSharp.Nixill.Calc.Dice/CSharp.Nixill.Calc.Dice.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <PackageId>Nixill.Calc.Dice</PackageId>
     <Version>$(RELEASE_VERSION)</Version>
     <Authors>Nixill</Authors>
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nixill.Calc" Version="0.3.0" />
-    <!-- <ProjectReference Include="../../CSharp.Nixill.Calc/CSharp.Nixill.Calc/CSharp.Nixill.Calc.csproj" /> -->
+    <!-- <PackageReference Include="Nixill.Calc" Version="0.3.0" /> -->
+    <ProjectReference Include="../CSharp.Nixill.Calc/CSharp.Nixill.Calc/CSharp.Nixill.Calc.csproj" />
   </ItemGroup>
 
 </Project>
