--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout the project
         uses: actions/checkout@master
+        with:
+          submodules: true
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
